--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../lasagna.png" alt="Picture of a lasagna on a plate" width="300" height="200">
+    <img src="../images/lasagna.png" alt="Picture of a lasagna on a plate" width="300" height="200">
     <h3>Description</h3>
     <p>After years of tweaking this recipe, I've finally got it to where I want it. Everyone raves about this lasagna just the way it is, although I'll probably never stop tweaking it!</p>
     <h3>Ingredients</h3>
