--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="recipes.png" alt="six books stacked on top of each other" width="200" height="150">
+    <img src="./images/recipes.png" alt="six books stacked on top of each other" width="200" height="150">
     <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"><p><em>Lasagna</em></p></a>
 </body>
 </html>
