added patty html file in recipes. added img of patty in images. added patty href link in index file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="./images/recipes.png" alt="six books stacked on top of each other" width="200" height="150">
-    <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"><p><em>Lasagna</em></p></a>
-    <a href="recipes/bread.html" target="_blank" rel="noopener noreferrer"><p><em>Bread</em></p></a>
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"><em>Lasagna</em></a></li>
+        <li><a href="recipes/bread.html" target="_blank" rel="noopener noreferrer"><em>Bread</em></a></li>
+        <li><a href="recipes/patty.html" target="_blank" rel="noopener noreferrer"><em>Patty</em></a></li>
+    </ul>
+    
 </body>
 </html>
